RESOLVED FIXED240518
MockAudioSharedInternalUnit::render should return kAudio_ParamError if input buffer is too small
https://bugs.webkit.org/show_bug.cgi?id=240518
Summary MockAudioSharedInternalUnit::render should return kAudio_ParamError if input ...
youenn fablet
Reported 2022-05-17 06:11:30 PDT
Attachments
EWS
Comment 1 2022-05-17 12:47:18 PDT
Committed r294334 (250654@main): <https://commits.webkit.org/250654@main> Reviewed commits have been landed. Closing PR #672 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.