MockAudioSharedInternalUnit::render should return kAudio_ParamError if input buffer is too small https://bugs.webkit.org/show_bug.cgi?id=240518 rdar://93409662

Patch by Youenn Fablet <youennf@gmail.com> on 2022-05-17
Reviewed by Eric Carlson.

The input buffer given to render should be large enough to copy enough frameCount samples.
If that is not the case, mimick what the real audio unit is doing and return kAudio_ParamError.
We also more closely mimick the real audio unit by sending chunks of at most AudioSession::sharedSession().bufferSize().

Covered by existing tests.

* Source/WebCore/platform/mediastream/mac/MockAudioSharedUnit.mm:
(WebCore::MockAudioSharedInternalUnit::generateSampleBuffers):
(WebCore::MockAudioSharedInternalUnit::render):

Canonical link: https://commits.webkit.org/250654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294334 268f45cc-cd09-0410-ab3c-d52691b4dbfc